删除定位校验

--- a/mobile/src/main/resources/prod/application.yml
+++ b/mobile/src/main/resources/prod/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8089
   servlet:
     context-path: /mobile
+  tomcat:
+    protocol-header: X-Forwarded-Proto
 spring:
   thymeleaf:
     cache: false
