--- a/common/src/main/resources/prod/common.properties
+++ b/common/src/main/resources/prod/common.properties
@@ -1,4 +1,4 @@
 #\u9759\u6001\u6587\u4EF6\u8DEF\u5F84\u524D\u7F00#
-web.urlPrefix = http://www.xhcminform.top/resource
+web.urlPrefix = //www.xhcminform.top/resource
 #\u9759\u6001\u6587\u4EF6\u7269\u7406\u8DEF\u5F84#
 web.realPath = D:/www/resource/
